# minicons

./: .gitignore  LICENSE  README.md  example.ipynb  pyproject.toml
docs/: .buildinfo  Makefile  conf.py  genindex.html  index.html  index.md  index.rst  minicons.cwe.html  minicons.html  minicons.scorer.html  minicons.supervised.html  minicons.utils.html  modules.html  objects.inv  py-modindex.html  representations.html  search.html  searchindex.js  surprisals.html  tutorials_surprisals.md  tutorials_word_representations.md
docs/_sources/: index.rst.txt  minicons.scorer.rst.txt  modules.rst.txt
docs/_static/: custom.css  custom.js  sphinxdoc.css
docs/source/: conf.py  index.rst  minicons.bin.rst  minicons.bin.score_cli.rst  minicons.bin.sentence_score_cli.rst  minicons.cwe.rst  minicons.rst  minicons.scorer.rst  minicons.utils.rst  surprisals.md
docs/source/_build/: genindex.html  minicons.html  minicons.scorer.html  minicons.utils.html  objects.inv  py-modindex.html  searchindex.js
docs/source/_build/.doctrees/: environment.pickle  index.doctree  minicons.cwe.doctree  minicons.doctree  minicons.scorer.doctree  minicons.supervised.doctree  minicons.utils.doctree  representations.doctree  surprisals.doctree
docs/source/_build/_sources/: index.rst.txt  representations.md.txt
docs/source/_build/html/: .buildinfo  genindex.html  index.html  minicons.cwe.html  minicons.html  minicons.scorer.html  minicons.supervised.html  minicons.utils.html  modules.html  py-modindex.html  search.html  searchindex.js
docs/source/_build/html/.doctrees/: environment.pickle  index.doctree  minicons.cwe.doctree  minicons.scorer.doctree  modules.doctree
docs/source/_build/html/_sources/: minicons.supervised.rst.txt
docs/source/_templates/: footer.html
docs/source/cwe/: CWE.rst  EncDecCWE.rst  VisualCWE.rst
docs/source/scorer/: IncrementalLMScorer.rst  MambaScorer.rst  MaskedLMScorer.rst  Seq2SeqScorer.rst  VLMScorer.rst
examples/: bow-correction.py  samplesentences.txt  succint.md  surprisals.md
minicons/: __init__.py  cwe.py  openai.py  scorer.py  supervised.py  utils.py
