[tool.poetry]
name = "minicons"
version = "0.3.35"
description = "A package of useful functions to analyze transformer based language models."
authors = ["Kanishka Misra <kanishka.replies@gmail.com>", "Aaron Mueller <amueller@jhu.edu>", "Carina Kauf <ckauf@mit.edu>", "Wentao Wang <wentao.wang@nyu.edu>", "Maria Ryskina <ryskina@mit.edu>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/kanishkamisra/minicons"
repository = "https://github.com/kanishkamisra/minicons"
keywords = ["transformers", "language models", "nlp", "interpretability"]

[tool.poetry.scripts]
minicons = 'minicons.bin.score_cli:process'

[tool.poetry.dependencies]
python = ">=3.9.0,<4"
transformers = ">=4.53"
accelerate= ">=0.25.0"
torch = ">=2.5.0"
urllib3 = ">=1.26.7,<3.0.0"
pandas = ">=2.2.0"
tenacity = ">=8.2.3"
pillow = ">=10.2.0"
wonderwords = ">=2.2.0"
numpy = ">=2.0.0"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
Sphinx = "^4.3.1"
furo = "^2021.11.23"
myst-parser = "^0.16.0"
typed-ast = "^1.5.5"

[tool.poetry.group.dev.dependencies]
black = ">=23.1,<25.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
