[tool.poetry]
name = "minicons"
version = "0.3.39"
description = "A package of useful functions to analyze transformer based language models."
authors = ["Kanishka Misra <kanishka.replies@gmail.com>", "Aaron Mueller <amueller@jhu.edu>", "Carina Kauf <ckauf@mit.edu>", "Wentao Wang <wentao.wang@nyu.edu>", "Maria Ryskina <ryskina@mit.edu>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/kanishkamisra/minicons"
repository = "https://github.com/kanishkamisra/minicons"
keywords = ["transformers", "language models", "nlp", "interpretability"]

[tool.poetry.scripts]
minicons = 'minicons.bin.score_cli:process'

[tool.poetry.dependencies]
python = ">=3.10.0,<4"
transformers = ">=4.6"
accelerate= ">=0.25.0"
torch = ">=2.5.0"
pandas = ">=2.2.0"
pillow = ">=10.2.0"
wonderwords = ">=2.2.0"
numpy = ">=2.0.0"

[tool.poetry.group.dev.dependencies]
black = ">=23.1,<25.0"
Sphinx = ">=7.0,<9"
furo = ">=2023.1.1"
myst-parser = ">=2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
